--- a/views/user/user-page.ejs
+++ b/views/user/user-page.ejs
@@ -32,7 +32,7 @@
         </form>
       </div>
       <div class="tab-pane fade col-lg-6 order-lg-8" id="expenses" role="tabpanel" aria-labelledby="expenses-tab">
-        <form>
+        <form id="form-expense" action="/user/<%= userName %>/expense" method="POST">
           <div class="form__container form-group">
             <label for="title">Enter title your expense</label>
             <input
