Added userExpense to view user-page

--- a/views/user/user-page.ejs
+++ b/views/user/user-page.ejs
@@ -71,7 +71,7 @@
         </div>
         <div class="row">
           <span class="information__amount information__amount--budget col"><%= userBudget ? userBudget : '---'%></span>
-          <span class="information__amount information__amount--expense col">---</span>       
+          <span class="information__amount information__amount--expense col"><%= userExpense ? userExpense : '---'%></span>       
           <span class="information__amount information__amount--balance col">---</span>
         </div>
       </section>
