Used button element instead of input

--- a/views/user/user-page.ejs
+++ b/views/user/user-page.ejs
@@ -52,7 +52,9 @@
             />
           </div>
           <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-          <input type="submit" value="Add expense" class="form__add-expense-btn btn btn-danger"/>
+          <button type="submit" class="form__add-expense-btn btn btn-danger">
+            Add expense
+          </button>
           <!-- ??? -->
         </form>
       </div>
