--- a/views/user/user-page.ejs
+++ b/views/user/user-page.ejs
@@ -52,6 +52,9 @@
             />
           </div>
           <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+          <button class="form__save-expenses-btn btn btn-secondary">
+            Save expenses
+          </button>
           <button class="form__add-expense-btn btn btn-danger">
             Add expense
           </button>
