Changed condition to userExpense

--- a/views/includes/expenses-table.ejs
+++ b/views/includes/expenses-table.ejs
@@ -1,5 +1,5 @@
 <table class="table table-striped">
-  <% if(userExpense.length !== 0) { %>
+  <% if(userExpense) { %>
   <tbody>
     <% for(let i = 0; i < userExpense.length; i++) { %>
     <tr>
