--- a/views/includes/expenses-table.ejs
+++ b/views/includes/expenses-table.ejs
@@ -11,7 +11,7 @@
           <ion-icon class="table__icon text-success" name="create">
         </button>
         <form action="/user/<%= userName %>/expense/delete" method="POST">
-          <input type="hidden" name="expenseId" value="<%= userExpense[i]._id %>" >
+          <input type="hidden" name="expenseId" value="<%= userExpense[i]._id %>" id="expenseId">
           <input type="hidden" name="_csrf" value="<%= csrfToken %>">
           <button type="submit" id="delete">
             <ion-icon class="table__icon text-danger" name="trash">
