Removed div and added imgs

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -7,9 +7,21 @@
   </div>
   <div class="flickity-carousel col-12">
     <div class="main-carousel">
-      <div class="carousel-cell"></div>
-      <div class="carousel-cell"></div>
-      <div class="carousel-cell"></div>
+      <img
+        src="/images/house.jpg"
+        alt="house-calculator"
+        class="carousel-cell"
+      />
+      <img
+        src="/images/desktop_user-page.png"
+        alt="house-calculator"
+        class="carousel-cell"
+      />
+      <img
+        src="/images/mobile_user-page.png"
+        alt="house-calculator"
+        class="carousel-cell"
+      />
       <div class="carousel-cell"></div>
       <div class="carousel-cell"></div>
     </div>
