--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -1,5 +1,5 @@
   </head>
-  <body class="container">
+  <body class="container container-height">
     <nav class="navbar navbar-expand-lg navbar-light">
     <h1 class="header__title"><a class="header__link" href="/">home budget app</a></h1>
 
