--- a/public/style/homepage.css
+++ b/public/style/homepage.css
@@ -14,6 +14,8 @@
 
 .header__btn {
   color: #fff !important;
+  background-color: #9ba2c1;
+  border: none;
 }
 
 .header__btn--login {
@@ -60,6 +62,9 @@
   height: 180px;
   border: 1px solid #888;
   border-radius: 10px;
+  background-color: #f9faf9;
+  box-shadow: 0 2px 2px 0 rgb(0 0 0 / 14%), 0 3px 1px -2px rgb(0 0 0 / 20%),
+    0 1px 5px 0 rgb(0 0 0 / 12%);
 }
 
 @media (min-width: 992px) {
@@ -78,6 +83,8 @@
   width: 120px;
   height: 50px;
   margin: 0 10px;
+  background-color: #9ba2c1;
+  border: none;
 }
 
 .register-login__button a {
@@ -88,4 +95,8 @@
 
 .register-login__button a:focus {
   text-decoration: none;
+}
+
+.main__title {
+  color: #f9faf9;
 }
