Added main__features and removed btn-secondary

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -4,6 +4,10 @@
 <main class="main row justify-content-center">
   <div class="main__title-container">
     <p class="main__title">Manage your budget</p>
+    <p class="main__features">
+      Create an account<br />Add your budget<br />Add your expenses<br />Check
+      your balance
+    </p>
   </div>
   <div class="flickity-carousel col-12">
     <div class="main-carousel">
@@ -29,10 +33,10 @@
 </main>
 <div class="register-login__container row justify-content-center">
   <p class="register-login__title col-12">Create an account or login</p>
-  <button class="register-login__button btn btn-secondary col-4">
+  <button class="register-login__button btn col-4">
     <a href="/register">Register</a>
   </button>
-  <button class="register-login__button btn btn-secondary col-4">
+  <button class="register-login__button btn col-4">
     <a href="/login">Sign in</a>
   </button>
 </div>
