--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -11,10 +11,10 @@
       <ul class="navbar-nav">
         <% if (!isLogged) { %>
         <li class="<%= path === '/register' ? 'd-none' : '' %> nav-item active">
-          <a id="header__btn" class="header__btn btn btn-secondary header__link nav-link" href="/register" type="button">Register</a>
+          <a id="header__btn" class="header__btn btn header__link nav-link" href="/register" type="button">Register</a>
         </li>
         <li class="<%= path === '/login' ? 'd-none' : '' %> nav-item active">
-          <a id="header__btn" class="header__btn header__btn--login btn btn-secondary header__link nav-link" href="/login" type="button">Login</a>
+          <a id="header__btn" class="header__btn header__btn--login btn header__link nav-link" href="/login" type="button">Login</a>
         </li>
         <% } %>
       </ul>
