Removed class btn-success from buttons

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,7 +25,7 @@
             />
           </div>
           <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-          <button type="submit" class="form__signin-btn btn btn-success">
+          <button type="submit" class="form__signin-btn btn">
             Sign in
           </button>
           <small class="form__smallText form-text text-muted"
