--- a/views/register.ejs
+++ b/views/register.ejs
@@ -34,7 +34,7 @@
             />
           </div>
           <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-          <button type="submit" class="form__signin-btn btn btn-success">
+          <button type="submit" class="form__signin-btn btn">
             Register
           </button>
         </form>
