--- a/views/includes/expenses-table.ejs
+++ b/views/includes/expenses-table.ejs
@@ -1,5 +1,15 @@
-<table class="table table-striped">
-  <% if(userExpense) { %>
+
+  <% if(userExpense.length > 0) { %>
+ <div class="table col-lg-6 order-lg-12 table-bgc">
+ <table class="table table-striped">
+   <thead>
+    <tr>
+      <th scope="col" class="table__head">#</th>
+      <th scope="col" class="table__head">Expense Name</th>
+      <th scope="col" class="table__head">Value</th>
+      <th scope="col" class="table__head">Options</th>
+    </tr>
+  </thead>
   <tbody>
     <% for(let i = 0; i < userExpense.length; i++) { %>
     <tr data-key="<%= i + 1 %>">
@@ -21,5 +31,7 @@
     </tr>
     <% } %>
   </tbody>
+    </table>
+  </div>
+
   <% } %>
-</table>
