--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -9,25 +9,12 @@
       your balance
     </p>
   </div>
-  <div class="flickity-carousel col-12">
+  <div class="flickity-carousel col-12 carousel__container">
     <div class="main-carousel">
-      <img
-        src="/images/house.jpg"
-        alt="house-calculator"
-        class="carousel-cell"
-      />
-      <img
-        src="/images/desktop_user-page.png"
-        alt="house-calculator"
-        class="carousel-cell"
-      />
-      <img
-        src="/images/mobile_user-page.png"
-        alt="house-calculator"
-        class="carousel-cell"
-      />
-      <div class="carousel-cell"></div>
-      <div class="carousel-cell"></div>
+      <div class="carousel-cell carousel-cell__image-0"></div>
+      <div class="carousel-cell carousel-cell__image-1"></div>
+      <div class="carousel-cell carousel-cell__image-2"></div>
+      <div class="carousel-cell carousel-cell__image-3"></div>
     </div>
   </div>
 </main>
