Added table-scrollbar in table-expenses

--- a/views/includes/expenses-table.ejs
+++ b/views/includes/expenses-table.ejs
@@ -1,6 +1,6 @@
 
   <% if(userExpense.length > 0) { %>
- <div class="table col-lg-6 order-lg-12 table-bgc">
+ <div class="table col-lg-6 order-lg-12 table-bgc table-scrollbar">
  <table class="table table-striped">
    <thead>
     <tr>
