Changed ionicons URL

--- a/views/user/user-page.ejs
+++ b/views/user/user-page.ejs
@@ -1,5 +1,5 @@
 <%- include('../includes/head.ejs') %>
-  <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
+  <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
   <link rel="stylesheet" href="/style/user-page.css" />
    <%- include('../includes/nav.ejs') %>
     </header>
