Changed ionicons URL

--- a/views/user/user-page.ejs
+++ b/views/user/user-page.ejs
@@ -1,5 +1,4 @@
 <%- include('../includes/head.ejs') %>
-  <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
   <link rel="stylesheet" href="/style/user-page.css" />
    <%- include('../includes/nav.ejs') %>
     </header>
@@ -89,4 +88,6 @@
 <% } %>
 <%- include('../includes/scripts.ejs') %>
 <script src="/js/user-page.js"></script>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 <%- include('../includes/end.ejs') %>
