--- a/public/style/user-page.css
+++ b/public/style/user-page.css
@@ -123,7 +123,8 @@ label {
 }
 
 .information__icon {
-  font-size: 30px;
+  text-align: center;
+  font-size: 32px !important;
 }
 
 .information__title,
@@ -169,13 +170,13 @@ label {
 }
 
 .table__icon {
-  font-size: 20px;
+  font-size: 22px !important;
 }
 
 .table button {
   border: none;
   background: none;
-  padding: 0 10px;
+  margin: 0 10px;
 }
 
 .table__buttons {
