Added icon link from fonts google

--- a/views/user/user-page.ejs
+++ b/views/user/user-page.ejs
@@ -1,5 +1,7 @@
 <%- include('../includes/head.ejs') %>
   <link rel="stylesheet" href="/style/user-page.css" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
    <%- include('../includes/nav.ejs') %>
     </header>
 <main>
