Added icon span, removed ion-icons and icons scripts

--- a/views/user/user-page.ejs
+++ b/views/user/user-page.ejs
@@ -62,9 +62,11 @@
       <% if(isLogged) { %>
       <section class="information container col-lg-6 order-lg-6">
         <div class="row">
-          <ion-icon class="information__icon text-success col" name="cash"></ion-icon>
-          <ion-icon class="information__icon text-danger col" name="basket"></ion-icon>
-          <ion-icon class="information__icon text-primary col" name="wallet"></ion-icon>
+          <span class="material-icons information__icon text-success col"> payments</span>
+          <span class="material-icons information__icon text-danger col">
+          shopping_basket</span>
+          <span class="material-icons information__icon text-primary col">
+          account_balance_wallet</span>
         </div>
         <div class="row">
           <p class="information__title col">Budget</p>
@@ -77,10 +79,7 @@
           <span class="information__amount information__amount--balance col"><%= userBalance ? userBalance : '---' %></span>
         </div>
       </section>
-
-     
         <%- include('../includes/expenses-table.ejs') %>
-      
       <% } %>
     </div>
   </div>
@@ -90,5 +89,4 @@
 <% } %>
 <%- include('../includes/scripts.ejs') %>
 <script src="/js/user-page.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 <%- include('../includes/end.ejs') %>
