Fix bugd - add next one condition in expense table

--- a/views/includes/expenses-table.ejs
+++ b/views/includes/expenses-table.ejs
@@ -1,4 +1,4 @@
-<% if(userExpense.length > 0) { %>
+<% if(userExpense && userExpense.length > 0) { %>
 <div class="table col-lg-6 order-lg-12 table-bgc table-scrollbar">
   <table class="table table-striped">
     <thead>
